# robot-showcase

./: .gitignore  FirstTest.robot  README.md  flauitest.robot  imagedetectiontest.robot  pyproject.toml  test_calculator.robot
cv_library/: OpenCVLibrary.py
os_library/: OSLibrary.py
